# Django_Course

./: .env.sample  README.md  pyproject.toml
config/: settings.py  urls.py
mailing/: admin.py  forms.py  mixins.py  models.py  services.py  urls.py  views.py
mailing/management/commands/: start_mailing.py
mailing/migrations/: 0001_initial.py  0002_alter_mailing_options_alter_message_options_and_more.py  0003_mailing_is_block_alter_mailing_status.py
mailing/templates/includes/: footer.html  inc_menu.html
mailing/templates/mailing/: attempt_list.html  base.html  mailing_block.html  mailing_create.html  mailing_delete.html  mailing_detail.html  mailing_list.html  message_create.html  message_delete.html  message_detail.html  message_list.html  recipient_create.html  recipient_delete.html  recipient_detail.html  recipient_list.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: create_group_fixture.py  create_manager_group.py  createadmin.py
users/migrations/: 0001_initial.py  0002_alter_customuser_username.py
users/templates/users/: register.html  user_detail.html  user_list.html
