[tool.poetry]
name = "djangoproject"
version = "0.1.0"
description = ""
authors = ["maksi <maksim.kuvshinov94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
mypy = "^1.11.2"
isort = "^5.13.2"
black = "^24.8.0"
flake8 = "^7.1.1"
requests = "^2.32.3"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
pillow = "^10.4.0"
ipython = "^8.28.0"
redis = "^5.2.0"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true

[tool.isort]
profile = "hug"
src_paths = ["isort", "test"]
line_length = 119

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 119
exclude = '''
(
  /(
      \.eggs         # Исключить несколько общих каталогов
    | \.git          # в корне проекта
    | \.hg
    | \.mypy_cach
    | \.tox
    | \.venv
    | dist
  )/
)
'''